--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.13",
+    "devextreme": "19.1.4",
+    "devextreme-react": "19.1.4",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
